MISC - render grid_form if 'update' action is available

--- a/app/views/_grid.html.erb
+++ b/app/views/_grid.html.erb
@@ -18,7 +18,7 @@
   </script>
 </div>
 
-<%- if grid.get_actions.include?('add') %>
+<%- if grid.get_actions.include?('add') or grid.get_actions.include?('update') %>
 <!-- Create form -->
 <%= render '/grid_form', :grid => grid %>
 <% end -%>
