--- a/app/views/_grid_form.html.erb
+++ b/app/views/_grid_form.html.erb
@@ -12,51 +12,53 @@ remote_paths = []
         <%- column_name = column.form_name %>
         <div class="field" name="<%= column_name %>">
           <label for="<%= model_name %>_<%= column_name %>"><%= column.label %></label>
+          <input type='checkbox' class='target_flag' data-target="<%= column_name %>_target_flag" />
           <%- if column.sql_type.to_s == 'belongs_to' %>
             <%- remote_paths << fetch_path(column) %>
             <%= form.select column_name, 
               select_options(column), 
-              { prompt: "Select #{column.label}" },
-              { :include_blank => !column.presence_required?, 
-                :class => 'chzn-select', 
-                :style => "width:250px", 
-                "data-remote-path" => fetch_path(column), 
-                "data-text-attr"   => column.option_text_attribute,
-                :disabled => column.options[:auto_fill]
-              } 
+              { include_blank: true },
+              :include_blank     => !column.presence_required?, 
+              :class             => 'chzn-select', 
+              :style             => "width:250px", 
+              :disabled          => column.options[:auto_fill],
+              "data-remote-path" => fetch_path(column), 
+              "data-text-attr"   => column.option_text_attribute,
+              "data-target"      => "#{column_name}_target_flag"
             %>
           
           <%- elsif column.sql_type.to_s == 'has_and_belongs_to_many' or column.sql_type.to_s == 'has_many' %>
             <%- remote_paths << fetch_path(column) %>
             <%= form.select column.reflection.name.to_s, 
               select_options(column), 
-              { prompt: "Select #{column.label}" },
-              { :include_blank => !column.presence_required?, 
-                :multiple => true, 
-                :class => 'chzn-select', 
-                :style => "width:250px", 
-                "data-remote-path" => fetch_path(column),
-                "data-text-attr"   => column.option_text_attribute,
-                :disabled => column.options[:auto_fill]
-               } 
+              { include_blank: true },
+              :include_blank     => !column.presence_required?, 
+              :multiple          => true, 
+              :class             => 'chzn-select', 
+              :style             => "width:250px", 
+              "data-remote-path" => fetch_path(column),
+              "data-text-attr"   => column.option_text_attribute,
+              "data-target"      => "#{column_name}_target_flag",
+              :disabled          => column.options[:auto_fill]
             %>
           
           <%- elsif column.options[:choices].present? %>
             <%- remote_paths << select_tag_fetch_path(column) %>
             <%= select_tag "#{model_name}[#{column_name}]", 
-              select_tag_options(column), 
+              select_tag_options(column),
+              :class             => 'chzn-select', 
+              :style             => "width:250px", 
+              :disabled          => column.options[:auto_fill],
+              "data-target"      => "#{column_name}_target_flag",
               "data-remote-path" => select_tag_fetch_path(column), 
-              "data-text-attr"   => column.option_text_attribute,
-              :class => 'chzn-select', 
-              :style => "width:250px", 
-              :disabled => column.options[:auto_fill]
+              "data-text-attr"   => column.option_text_attribute
             %>
           
           <%- else %>
             <%- if column.sql_type.to_s.downcase == 'boolean' %>
-              <%= form.check_box column_name, :readonly => column.options[:auto_fill] %>
+              <%= form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag" %>
             <% else %>
-              <%= form.text_field column_name, :style => 'width: 250px', :readonly => column.options[:auto_fill], 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column) %>
+              <%= form.text_field column_name, :style => 'width: 250px', :readonly => column.options[:auto_fill],"data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column) %>
             <% end -%>
           <%- end %>
           <div class='field_error'></div>
@@ -65,14 +67,17 @@ remote_paths = []
     <% end -%>
     <div class="submit"> 
       <input id="<%= grid.name %>_submit" name="commit" type="submit" value=" Create " class="btn success" /> 
-      <input id="<%= grid.name %>_submit_continue" name="commit" type="submit" value=" Create and Continue " class="btn" /> 
+      <input id="<%= grid.name %>_submit_continue" name="commit" type="submit" value=" Create and Continue " class="btn" />
+      <input id="<%= grid.name %>_batch_update" name="commit" type="submit" value="  Update  " class="btn success update_btn" /> 
     </div>
     <%= hidden_field_tag 'remote_paths', j(remote_paths.uniq.compact.join(',')) %>
   <% end -%>
 </div>
 
 <%= javascript_tag do -%>
-  $('.chzn-select:not([data-remote-path])').chosen();
+  $('.chzn-select:not([data-remote-path])').chosen().change(function(){
+    $('input:checkbox[data-target="' + $(this).attr('data-target') + '"]').attr('checked', 'checked');
+  });
   $('input[data-date]').datepicker({ dateFormat: 'yy-mm-dd' });
   $('input[data-datetime]').datetimepicker({
       dateFormat: "yy-mm-dd",
