--- a/app/views/_grid_form.html.erb
+++ b/app/views/_grid_form.html.erb
@@ -76,7 +76,7 @@ remote_paths = []
 
 <%= javascript_tag do -%>
   $('.chzn-select:not([data-remote-path])').chosen().change(function(){
-    $('input:checkbox[data-target="' + $(this).attr('data-target') + '"]').attr('checked', 'checked');
+    $('.target_flag[data-target="' + $(this).attr('data-target') + '"]').attr('checked', 'checked');
   });
   $('input[data-date]').datepicker({ dateFormat: 'yy-mm-dd' });
   $('input[data-datetime]').datetimepicker({
