--- a/app/views/_grid_form.html.erb
+++ b/app/views/_grid_form.html.erb
@@ -81,6 +81,6 @@ remote_paths = []
   $('input[data-date]').datepicker({ dateFormat: 'yy-mm-dd' });
   $('input[data-datetime]').datetimepicker({
       dateFormat: "yy-mm-dd",
-      timeFormat: 'hh:mm:ss'
+      timeFormat: 'hh:mm'
   });
 <% end -%>
