MISC - Menu style improvement

--- a/app/assets/stylesheets/menu.sass
+++ b/app/assets/stylesheets/menu.sass
@@ -42,8 +42,12 @@ $menu_width:  199px
     
 
   #menu
-    :position relative
+    :position absolute
+    :overflow-y auto
+    :top 42px
+    :right 0 
     :left 10px
+    :bottom 120px
     ul
       :margin-top             2px
       :margin-bottom          $margin
