MISC - update some grid css

--- a/app/assets/stylesheets/grid_form.sass
+++ b/app/assets/stylesheets/grid_form.sass
@@ -18,7 +18,7 @@
         padding: 	3px 2px
     
     .submit
-      padding: 10px 0 10px 100px
+      padding: 10px 0 10px 130px
       
     .field_error
       color:  red
@@ -26,4 +26,8 @@
       display: inline-block
       margin-left: 5px
       max-width: 85px
+
+    .actions
+      margin-top: 5px
+      padding: 0 50px
       
