--- a/app/assets/stylesheets/jquery_ui_overrides.sass
+++ b/app/assets/stylesheets/jquery_ui_overrides.sass
@@ -20,7 +20,7 @@
 .ui-dialog
   :overflow visible
   .ui-dialog-content
-    :overflow visible
+    :overflow auto
 .ui-dialog 
   .ui-dialog-content 
     padding: 0 1em
