--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -48,3 +48,5 @@ $toolbar_button_height:  48px
   :background             image-url('ui/create_icon.png') no-repeat top center
 .toolbar_icon_batch_update
   :background             image-url('ui/batch_update.png') no-repeat top center
+.toolbar_icon_disabled
+  +opacity(0.4)
