MISC - improved timepicker width css

--- a/app/assets/stylesheets/grid_overrides.sass
+++ b/app/assets/stylesheets/grid_overrides.sass
@@ -105,7 +105,13 @@ $pager_background:             #eff3f8
   :font-weight            normal
   :font-size              12px
   +text-shadow(white, 1px, 1px, 0)
-  
+
+
+/* datapicker */
+.ui-datepicker
+  :min-width 17em
+  :width auto !important
+
 /* datapicker icon */
 .ui-datepicker-trigger
   margin-top: 2px
