--- a/app/assets/stylesheets/body.sass
+++ b/app/assets/stylesheets/body.sass
@@ -51,6 +51,7 @@ h1
   :text-align left
   :height     100%
   :width      100%
+  :overflow-x auto
   
 h2
   :margin                     0 0 10px 0
