Refactor wulin master actions, introduced ActionManager, defined add, delete, edit, filter as default actions

--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -3,7 +3,7 @@
 $toolbar_button_width:  56px
 $toolbar_button_height:  48px
 
-#toolbar
+.toolbar
   :float              right
   :padding-right      5px
   :padding-top        5px
@@ -32,21 +32,17 @@ $toolbar_button_height:  48px
         :height           12px
 
         
-.toolbar_icon_search
-  :background             image-url('ui/search_icon2.png') no-repeat top center
-.toolbar_icon_search2
+.toolbar_icon_filter
   :background             image-url('ui/search_icon.png') no-repeat top center
 .toolbar_icon_refresh
   :background             image-url('ui/refresh_icon.png') no-repeat top center
-.toolbar_icon_filter
-  :background             image-url('ui/filter_icon.png') no-repeat top center
 .toolbar_icon_delete_x
   :background             image-url('ui/delete_icon_x.png') no-repeat top center
-.toolbar_icon_delete_trash
+.toolbar_icon_delete
   :background             image-url('ui/delete_icon_trash.png') no-repeat top center
-.toolbar_icon_create
+.toolbar_icon_add
   :background             image-url('ui/create_icon.png') no-repeat top center
-.toolbar_icon_batch_update
+.toolbar_icon_edit
   :background             image-url('ui/batch_update.png') no-repeat top center
 .toolbar_icon_toggle
   :background             image-url('ui/toggle_icon.png') no-repeat top center
