--- a/app/views/_grid_form.html.haml
+++ b/app/views/_grid_form.html.haml
@@ -62,9 +62,9 @@
             - else
               = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill],"data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column)
           .field_error
-    .actions
-      - grid.class.actions.select{|a| a.is_a?(Hash) and a[:on] == "create" }.each do |i|
-        %input.btn{:id => "#{i[:name]}_on_#{model_name}_create", :class => i[:name], :name => i[:name], :type => "button", :value => i[:label] || i[:name].titleize}/
+    / .actions
+    /   - grid.class.actions.select{|a| a.is_a?(Hash) and a[:on] == "create" }.each do |i|
+    /     %input.btn{:id => "#{i[:name]}_on_#{model_name}_create", :class => i[:name], :name => i[:name], :type => "button", :value => i[:label] || i[:name].titleize}/
     .submit
       %input.btn.success{:id => "#{grid.name}_submit", :name => "commit", :type => "submit", :value => " Create "}/
       %input.btn{:id => "#{grid.name}_submit_continue", :name => "commit", :type => "submit", :value => " Create and Continue "}/
