MISC - rename the confirmation dialog title

--- a/app/views/home.html.haml
+++ b/app/views/home.html.haml
@@ -4,7 +4,7 @@
     - begin
       = render :template => 'homepage/dashboard'
     - rescue
-  #confirm_dialog.ui-state-highlight{:style => "display: none;", :title => "Delete Confirmation"}
+  #confirm_dialog.ui-state-highlight{:style => "display: none;", :title => "Confirmation"}
     %h4
       %span.ui-icon.ui-icon-alert{:style => "float: left; margin-right: .2em;"}
       Are you sure to do this ?
