MISC - integration wulin_permits for toolbar

--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -12,10 +12,10 @@
                               '#{grid.path_for_json(request.query_parameters).to_s.html_safe}',
                                #{grid.javascript_column_model.html_safe},
                                #{grid.states_for_user(current_user).html_safe},
-                               #{grid.get_actions.to_s.html_safe},
+                               #{grid.get_actions.to_json.to_s.html_safe},
                                #{grid.options.html_safe});
                                
-- if grid.get_actions.include?('add') or grid.get_actions.include?('update')
+- if (grid.get_actions.include?('add') or grid.get_actions.include?('update')) and controller.screen.authorize_create?(current_user)
   / Create form, try to first use the overidden form, otherwise render the default form
   - begin
     = render 'grid_form', :grid => grid
