FEATURE #9705 2h - If the action is a customized one, write its widget html in the same name file under views/action_partials folder, render it to grid header

--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -2,6 +2,8 @@
 .grid_container{:id => "grid_#{grid.name}", :style => grid.style}
   - unless grid.hide_header?
     .grid-header
+      - grid.header_actions.each do |a|
+        = render "action_partials/#{a[:name]}" rescue nil
       = grid.toolbar.render
       %h2= grid.title
   .grid
