MISC - adjust the grid header html and css

--- a/app/assets/stylesheets/body.sass
+++ b/app/assets/stylesheets/body.sass
@@ -24,6 +24,7 @@ h1
     :position                 relative
     :height                   59px
     :background               image-url('ui/top_bar_bg.png')
+    :min-width                1080px
     h2
       :padding-top            $margin
       :padding-left           $margin
