--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -5,6 +5,7 @@ $toolbar_button_height:  48px
 
 .toolbar
   :float              right
+  :display            inline
   :padding-right      5px
   :padding-top        5px
   .toolbar_item
