--- a/app/assets/stylesheets/menu.sass
+++ b/app/assets/stylesheets/menu.sass
@@ -44,7 +44,7 @@ $menu_width:  199px
   #menu
     :position absolute
     :overflow-y auto
-    :top 42px
+    // :top 42px
     :right 0 
     :left 10px
     :bottom 120px
