--- a/app/views/_grid_form.html.haml
+++ b/app/views/_grid_form.html.haml
@@ -14,8 +14,9 @@
           else
             column_name = column.form_name
           end
+          label = column.options[:form_label] || column.label
         .field{:name => column_name}
-          %label{:for => "#{model_name}_#{column_name}"}= column.options[:form_label] || column.label
+          %label{:for => "#{model_name}_#{column_name}"}= label
           %input.target_flag{"data-target" => "#{column_name}_target_flag", :type => "checkbox"}/
           
           - if column.sql_type.to_s == 'belongs_to'
@@ -29,7 +30,8 @@
               :disabled          => column.options[:auto_fill],   |
               "data-remote-path" => fetch_path(column),           |
               "data-text-attr"   => column.option_text_attribute, |
-              "data-target"      => "#{column_name}_target_flag"  |
+              "data-target"      => "#{column_name}_target_flag", |
+              "data-column"       => column.name                  |
               
           - elsif column.sql_type.to_s == 'has_and_belongs_to_many' or column.sql_type.to_s == 'has_many'
             - remote_paths << fetch_path(column)
@@ -43,6 +45,7 @@
               "data-remote-path" => fetch_path(column),           |
               "data-text-attr"   => column.option_text_attribute, |
               "data-target"      => "#{column_name}_target_flag", |
+              "data-column"      => column.name,                  |
               :disabled          => column.options[:auto_fill]    |
               
           - elsif column.options[:choices].present?
@@ -54,13 +57,14 @@
               :disabled          => column.options[:auto_fill],    |
               "data-target"      => "#{column_name}_target_flag",  |
               "data-remote-path" => select_tag_fetch_path(column), |
-              "data-text-attr"   => column.option_text_attribute   |
+              "data-text-attr"   => column.option_text_attribute,  |
+              "data-column"      => column.name                    |
               
           - else
             - if column.sql_type.to_s.downcase == 'boolean'
-              = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag"
+              = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name
             - else
-              = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill],"data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column)
+              = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill],"data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), "data-column" => column.name
           .field_error
     / .actions
     /   - grid.class.actions.select{|a| a.is_a?(Hash) and a[:on] == "create" }.each do |i|
