MISC - delete default_hour and default_minute config, use default value in model

--- a/app/views/_grid_form.html.haml
+++ b/app/views/_grid_form.html.haml
@@ -79,7 +79,7 @@
             - if column.sql_type.to_s.downcase == 'boolean'
               = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name
             - else
-              = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill],"data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), 'data-hour' => default_hour(column), 'data-minute' => default_minute(column), "data-column" => column.name
+              = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill],"data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-column" => column.name
           .field_error
     / .actions
     /   - grid.class.actions.select{|a| a.is_a?(Hash) and a[:on] == "create" }.each do |i|
@@ -100,11 +100,4 @@
     dateFormat: "yy-mm-dd",
     timeFormat: 'hh:mm'
   });
-  $('input[data-time]').each(function(){
-    var hour = parseInt($(this).data('hour')) || 0;
-    var minute = parseInt($(this).data('minute')) || 0;
-    $(this).timepicker({
-      hour: hour,
-      minute: minute
-    });
-  });
+  $('input[data-time]').timepicker({});
