FEATURE #10240 - Clear the creation form (reload from server new html) after creation in order to get a clean form to start with (or with default values as defined in database)

--- a/app/views/_grid_form.html.haml
+++ b/app/views/_grid_form.html.haml
@@ -4,7 +4,7 @@
   datepicker_str = ''
   object = grid.model.new
   remote_paths = []
-.create_form{:id => "#{grid.name}-form", :title => "Create new #{model_name.titleize}"}
+.create_form{:id => "#{grid.name}_form", :title => "Create new #{model_name.titleize}"}
   = form_for object, :url => grid.path do |form|
     - columns.each do |column|
       - if column.options[:formable] != false
