different presentation changes

--- a/app/assets/stylesheets/grid_overrides.sass
+++ b/app/assets/stylesheets/grid_overrides.sass
@@ -18,7 +18,7 @@ $pager_background:             #eff3f8
   :background             image-url('ui/column_header_background.png') repeat-x
   :border                 none
   :border-left            1px solid $column_header_border_color 
-  :text-align             left
+  :text-align             center
   :position               relative
   
 .slick-header-column.ui-state-default.ui-state-hover
