Refactor - can write configs for grid in screen, a screen can render multiple grids

--- a/app/assets/stylesheets/body.sass
+++ b/app/assets/stylesheets/body.sass
@@ -20,6 +20,7 @@ h1
   
 .grid_container
   :float left
+  :width 100%
   .grid-header
     :position                 relative
     :height                   59px
