MISC - add synchronize icon

--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -47,5 +47,7 @@ $toolbar_button_height:  48px
   :background             image-url('ui/batch_update.png') no-repeat top center
 .toolbar_icon_toggle
   :background             image-url('ui/toggle_icon.png') no-repeat top center
+.toolbar_icon_sync
+  :background             image-url('ui/sync_icon.png') no-repeat top center
 .toolbar_icon_disabled
   +opacity(0.4)
