FEATURE #10240 - Clear the creation form (reload from server new html) after creation in order to get a clean form to start with (or with default values as defined in database)
- fixed the bug of grid action: the create form doesn't show because no screen param. should load all actions if no screen params

--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -1,5 +1,5 @@
 - grid = controller.screen.grids.first
-- if grid.action_names.include?('add')
+- if grid.action_names.include?('add') || grid.action_names.include?('hotkey_add') 
   :ruby
     model_name = grid.model.name.underscore
     columns = grid.columns.dup.delete_if {|x| x.name.to_s == 'id' }
