--- a/app/views/_grid_form.html.haml
+++ b/app/views/_grid_form.html.haml
@@ -62,12 +62,12 @@
             - if column.options[:depend_column].present?
               :javascript
                 $(function(){
-                  var current_select_id = "#{model_name}_#{column_name}";
-                  var current_select = $("select#" + current_select_id);
                   var depend_select_id = "#{model_name}_#{column.options[:depend_column]}";
                   var depend_select = $("select#" + depend_select_id);
 
-                  depend_select.change(function(){
+                  depend_select.live('change', function(){
+                    var current_select_id = "#{model_name}_#{column_name}";
+                    var current_select = $("select#" + current_select_id);
                     var key = $(this).val();
                     current_select.find("option").hide().trigger("liszt:updated");
                     current_select.val("").trigger("liszt:updated");
