--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -52,8 +52,8 @@
               - remote_paths << select_tag_fetch_path(column)
               = select_tag "#{model_name}[#{column_name}]",          |
                 select_tag_options(column),                          |
-                :class             => 'chzn-select',                 |
                 :style             => "width:250px",                 |
+                :class             => 'chzn-select',                 |
                 :disabled          => column.options[:auto_fill],    |
                 "data-target"      => "#{column_name}_target_flag",  |
                 "data-remote-path" => select_tag_fetch_path(column), |
@@ -62,12 +62,12 @@
               - if column.options[:depend_column].present?
                 :javascript
                   $(function(){
-                    var current_select_id = "#{model_name}_#{column_name}";
-                    var current_select = $("select#" + current_select_id);
                     var depend_select_id = "#{model_name}_#{column.options[:depend_column]}";
                     var depend_select = $("select#" + depend_select_id);
 
-                    depend_select.change(function(){
+                    depend_select.live('change', function(){
+                      var current_select_id = "#{model_name}_#{column_name}";
+                      var current_select = $("select#" + current_select_id);
                       var key = $(this).val();
                       current_select.find("option").hide().trigger("liszt:updated");
                       current_select.val("").trigger("liszt:updated");
