--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -95,7 +95,12 @@
     $('input[data-datetime]').datetimepicker({
       onlyTime: false,
       dateFormat: "yy-mm-dd",
-      timeFormat: 'hh:mm'
+      timeFormat: 'hh:mm',
+      timeOnly: false,
+      stepMinute: 0,
+      minuteGrid: 0,
+      beforeShow: function() { calendarOpen = true },
+      onClose: function() { calendarOpen = false }
     });
     $('input[data-time]').timepicker({});
   
