--- a/app/assets/stylesheets/menu.sass
+++ b/app/assets/stylesheets/menu.sass
@@ -47,7 +47,8 @@ $menu_width:  199px
     // :top 42px
     :right 0 
     :left 10px
-    :bottom 120px
+    // :bottom 120px
+    :bottom 150px
     ul
       :margin-top             2px
       :margin-bottom          $margin
@@ -92,25 +93,55 @@ $menu_width:  199px
           a
             :color          $menu_item_active_text
             +text-shadow(#000, 1px, 1px, 0)
+  
+  #user_nav
+    :position absolute
+    :bottom 80px
+    :border-top 1px solid #c5c5c5
+    :background-color #EFF3F8
+    :min-height 70px
+    :width  $menu_width
+    
+    #user_email
+      :margin 7px 5px
+      :font-size 14px
+      :white-space nowrap
+      :overflow hidden
+      .email
+        :color #336699
+        
+    #user_action
+      :margin 0 5px
+      a
+        &.action
+          :padding 4px 5px
+          :text-decoration none
+          :font-size 12px
+        &.left
+          :margin-right 7px
             
   #activity
     :position absolute
     :bottom 0
     :border-top 1px solid #c5c5c5
     :background-color #ededed
-    :min-height 120px
+    // :min-height 120px
+    :min-height 80px
     :width  $menu_width
+    
+    h2
+      :margin-bottom 0
 
     #indicators  
       .loading_indicator
-        :margin-left 10px
-        :width            180px
-        :color #717167
-        :font-size 11px
+        :margin-left  10px
+        :width        180px
+        :color        #717167
+        :font-size    11px
           
         .loading_text
-          :margin-top 5px
-          :margin-left 6px
+          :margin-top   5px
+          :margin-left  6px
           //:text-transform uppercase
           //:font-weight bold
         
