FEATURE #10469 30m - Show database name in the homepage (the empty initial screen) on the bottom left corner in a small font

--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -31,3 +31,5 @@
   #activity
     %h2 Activity
     #indicators
+    #db_info
+      = Rails.configuration.database_configuration[Rails.env]["database"]
