--- a/app/views/index.html.haml
+++ b/app/views/index.html.haml
@@ -1,3 +1,8 @@
 - controller.screen.grids.each_with_index do |grid, index|
   = render :partial => '/grid', :locals => {:grid => grid}
   - break if grid.fill_window?
+
+:javascript
+  $(function(){
+    $("#db_info").hide();
+  });
