--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -24,8 +24,11 @@
         User: 
         %span.email= User.current_user.email
       #user_action
-        = link_to 'Change Password', WulinOAuth.configuration['change_password_uri'] || 'javascript: alert("Set change_password_uri in config/wulin_oauth.yml");', class: 'left btn action'
+        = link_to 'Change Password', '#', class: 'left btn action', id: 'change_password_btn'
         = link_to 'Logout', logout_path, class: 'btn action', id: 'logout_btn'
+        
+      #change_password_dialog(title="Change password" style="display: none;")
+        %iframe(frameborder='0' marginheight='0' height='500px' width='500px' src='#{WulinOAuth.configuration['change_password_uri']}' scrolling='no')
 
   
   #activity
@@ -38,5 +41,21 @@
   $(function(){
     $('#logout_btn').on('click', function(){
       window.open('#{WulinOAuth.configuration['logout_uri']}');
+    });
+    
+    $('#change_password_btn').on('click', function(){
+      $('#change_password_dialog').dialog({
+        autoOpen: true,
+        width: 540,
+        height: 460,
+        buttons: {
+          Ok: function() {
+            $(this).dialog( "destroy" );
+          }
+        },
+        close: function() { 
+          $(this).dialog("destroy");
+        }
+      })
     })
   })
