--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -11,6 +11,7 @@
 
   :javascript
     gridManager.createNewGrid('#{grid.name.to_s.html_safe}',
+                              '#{grid.model.to_s.html_safe}',
                               '#{grid.params["screen"].to_s.html_safe}',
                               '#{grid.path_for_json(request.query_parameters).to_s.html_safe}',
                                #{grid.javascript_column_model.html_safe},
