MISC - return false if can't find inclusionGrid or exclusionGrid when click 'Add' or 'Remove' button on InclusionExclusionPanel

--- a/app/views/panel_partials/wulin_master/_inclusion_exclusion.html.haml
+++ b/app/views/panel_partials/wulin_master/_inclusion_exclusion.html.haml
@@ -22,6 +22,8 @@
       var inclusionGrid = gridManager.getGrid(inclusionGridName);
       var exclusionGrid = gridManager.getGrid(exclusionGridName);
 
+      if(!inclusionGrid || !exclusionGrid) return false;
+
       if (type == 'add') {
         ids = exclusionGrid.getSelectedIds(); 
       } else if (type == 'remove') {
