MISC #10684 30m - Beautify the inclusion-exclusion panel

--- a/app/assets/stylesheets/panel.sass
+++ b/app/assets/stylesheets/panel.sass
@@ -2,9 +2,16 @@
   float: left
 
 #panel_inclusion_exclusion
-  .action_btns
-    padding: 80% 13% 0
-    .btn
-      width: 100%
-    #remove_btn
-      margin-top: 10px
+  fieldset
+    height: 96%
+    margin: 3%
+    padding: 0
+    position: relative
+    .action_btns
+      position: absolute
+      top: 36%
+      padding: 0 5%
+      .btn
+        width: 100%
+      #remove_btn
+        margin-top: 10px
