--- a/app/views/panel_partials/wulin_master/_inclusion_exclusion.html.haml
+++ b/app/views/panel_partials/wulin_master/_inclusion_exclusion.html.haml
@@ -1,6 +1,7 @@
-.action_btns{:"data-inclusion-grid" => panel.params["inclusion_grid"], :"data-exclusion-grid" => panel.params["exclusion_grid"]}
-  = button_tag '❮❮ Add', type: 'button', class: 'btn success', id: 'add_btn'
-  = button_tag 'Remove ❯❯', type: 'button', class: 'btn danger', id: 'remove_btn'
+%fieldset
+  .action_btns{:"data-inclusion-grid" => panel.params["inclusion_grid"], :"data-exclusion-grid" => panel.params["exclusion_grid"]}
+    = button_tag '❮❮ Add', type: 'button', class: 'btn success', id: 'add_btn'
+    = button_tag 'Remove ❯❯', type: 'button', class: 'btn danger', id: 'remove_btn'
 
 :javascript
   $(function(){
