MISC - Improve change password dialog

--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -28,7 +28,7 @@
         = link_to 'Logout', "#{WulinOAuth.configuration['logout_uri']}?redirect_uri=#{logout_url}", class: 'btn action'
         
       #change_password_dialog(title="Change password" style="display: none;")
-        %iframe(frameborder='0' marginheight='0' height='500px' width='500px' src='#{WulinOAuth.configuration['change_password_uri']}' scrolling='no')
+        -#%iframe(frameborder='0' marginheight='0' height='500px' width='500px' src='#{WulinOAuth.configuration['change_password_uri']}' scrolling='no')
 
   
   #activity
@@ -38,6 +38,8 @@
 :javascript
   $(function(){
     $('#change_password_btn').on('click', function(){
+      $('#change_password_dialog').append("<iframe frameborder='0' marginheight='0' id='change_password_iframe' name='change_password_iframe' height='500px' width='500px' src='#{WulinOAuth.configuration['change_password_uri']}' scrolling='no'></iframe>");
+      
       $('#change_password_dialog').dialog({
         autoOpen: true,
         width: 540,
