MISC - improve the toolbar disabled cursor css

--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -51,3 +51,4 @@ $toolbar_button_height:  48px
   :background             image-url('ui/sync_icon.png') no-repeat top center
 .toolbar_icon_disabled
   +opacity(0.4)
+  :cursor default !important
