MISC - improved the inclusion-exclusion grid active cell behavior

--- a/app/views/panel_partials/wulin_master/_inclusion_exclusion.html.haml
+++ b/app/views/panel_partials/wulin_master/_inclusion_exclusion.html.haml
@@ -65,6 +65,8 @@
         if(response.status == 'OK') {
           inclusionGrid.loader.reloadData();
           exclusionGrid.loader.reloadData();
+          inclusionGrid.resetActiveCell();
+          exclusionGrid.resetActiveCell();
           displayNewNotification(response.message);
         } else {
           displayErrorMessage(response.message);
